Add security path and authorities